--- a/jupyter-MEMS.ipynb
+++ b/jupyter-MEMS.ipynb
@@ -21,15 +21,20 @@
    "source": [
     "### Table des matières\n",
     "\n",
-    "* [Chapitre 1](#chapter1)\n",
-    "    * [Section 1.1](#section_1_1)\n",
-    "    * [Section 1.2](sSection_1_2)\n",
-    "        * [Section 1.2.1](#section_1_2_1)\n",
-    "        * [Section 1.2.2](#section_1_2_2)\n",
-    "        * [Section 1.2.3](#section_1_2_3)\n",
-    "* [Chapter 2](#chapter2)\n",
-    "    * [Section 2.1](#section_2_1)\n",
-    "    * [Section 2.2](#section_2_2)"
+    "- [I - Introduction](#i---introduction)  \n",
+    "- [II - Modélisation du problème](#ii---modelisation-du-probleme)  \n",
+    "  - [II.1 - Principe de Fonctionnement](#ii1---principe-de-fonctionnement)  \n",
+    "  - [II.2 - Modèle simplifié masse-ressort avec masse ajoutée](#ii2---modele-simplifie-masse-ressort-avec-masse-ajoutee)  \n",
+    "- [III - Modélisation du déplacement de la poutre via l’algorithme de Newmark](#iii---modelisation-du-deplacement-de-la-poutre-via-lalgorithme-de-newmark)  \n",
+    "- [IV - Méthode 1 : Décalage en fréquence](#iv---methode-1--decalage-en-frequence)  \n",
+    "  - [IV.1 - Tracé d’une courbe de réponse du résonateur sans masse ajoutée](#iv1---trace-dune-courbe-de-reponse-du-resonateur-sans-masse-ajoutee)  \n",
+    "  - [IV.2 - Modification du modèle et ajout d’une masse](#iv2---modification-du-modele-et-ajout-dune-masse)  \n",
+    "  - [IV.3 - Régression du décalage en fréquence en fonction de la masse ajoutée](#iv3---regression-du-decalage-en-frequence-en-fonction-de-la-masse-ajoutee)  \n",
+    "- [V - Méthode 2 : Saut en amplitude](#v---methode-2--saut-en-amplitude)  \n",
+    "  - [V.1 - Analyse du bassin d’attraction du système non-linéaire](#v1---analyse-du-bassin-dattraction-du-systeme-non-lineaire)  \n",
+    "  - [V.2 - Détection non-linéaire par saut d’amplitude](#v2---detection-non-lineaire-par-saut-damplitude)  \n",
+    "- [VI - Conclusion](#vi---conclusion)\n",
+    "\n"
    ]
   },
   {
@@ -37,7 +42,7 @@
    "id": "adf133ce",
    "metadata": {},
    "source": [
-    "## I - Contexte \n",
+    "## I - Introduction\n",
     "\n",
     "L'amélioration des techniques industrielles permet aujourd'hui le développement de composants\n",
     "technologiques de plus en plus petits. Ils ouvrent la porte à de nombreux domaines d'application tels que la\n",
@@ -52,7 +57,7 @@
     "**Dans ce projet, nous nous intéressons spécifiquement à la simulation d’un capteur MEMS de mesure\n",
     "de masse d'ultra haute précision.**\n",
     "\n",
-    "Celui-ci fonctionne grâce à la résonance d'une nano-poutre soumise à une force électromagnétique induite\n",
+    "Celui-ci fonctionne grâce à la résonance d'une nano-poutre soumise à une force électrostatique induite\n",
     "par deux sources de tension : une continue et une alternative.\n",
     "\n",
     "**Nous étudions l'effet de l'ajout d'une masse sur le comportement du système résonnant et la\n",
@@ -74,7 +79,7 @@
    "source": [
     "### II.1 - Principe de Fonctionnement\n",
     "\n",
-    "La nano-poutre est soumise à une tension continue via une électrode 𝑉𝑑𝑐 qui fait fléchir la poutre, alors qu'une tension alternative harmonique 𝑉𝑎𝑐 la sollicite sur sa fréquence fondamentale de flexion (au maximum d'amplitude). L’ajout d’une petite masse change la masse totale du résonateur et induit donc un changement de sa fréquence fondamentale, ce qui permet de déduire la valeur de la masse ajoutée.\n",
+    "La nano-poutre est soumise à une tension continue via une électrode 𝑉𝑑𝑐 qui fait fléchir la poutre, alors qu'une tension alternative harmonique 𝑉𝑎𝑐 la sollicite sur sa fréquence fondamentale de flexion (au maximum d'amplitude). L’ajout d’une petite masse change la masse totale du résonateur et induit donc un changement de sa fréquence fondamentale. La mesure de cette différence de fréquence nous permet de déduire la valeur de la masse ajoutée.\n",
     "\n",
     "**PHOTO/schéma**\n",
     "\n",
@@ -118,7 +123,7 @@
     "Avec :\n",
     "- La force électrostatique non-linéaire est : $ F_e(x,t) = \\frac{\\varepsilon_0 A}{2} \\cdot \\frac{\\left[ V_{dc} + V_{ac} \\cos(\\omega t) \\right]^2}{(d - x)^2}$ \n",
     "- $m = \\rho A h$ : masse de la nano-poutre de masse volumique $\\rho$ homogne\n",
-    "- $c$ et $k$ : coefficient d'amortissement et de raideur\n",
+    "- $c$ et $k$ : coefficient d'amortissement et de raideur respectifs\n",
     "    \n",
     "    Et : \n",
     "    - $\\epsilon_0 = 8.5*10^{-12} F.m^{-1} $ : permitivité diélectrique absolue du vide\n",
@@ -130,7 +135,7 @@
     "\n",
     "\n",
     "**Cependant** :\n",
-    "Il est nécessaire d’adimensionner les variables $x$ et $\\omega$ car, les ordres de grandeur étant significativement différents entre eux, nous pourrions obtenir des résultats aberrants lors de la mise en place d’un schéma numérique.\n",
+    "Il est nécessaire d’adimensionner les variables $x$ et $\\omega$ car, les ordres de grandeur étant significativement différents entre eux, nous pourrions obtenir des résultats soumis à des instabilités lors de la mise en place des schémas numériques.\n",
     "\n",
     "On pose :\n",
     "- $\\tau = \\omega_0t$ le temps adimensionné avec $\\omega_0 = \\sqrt{\\frac{k}{m}}$ la pulsation propre du système\n",
@@ -160,7 +165,7 @@
     "\n",
     "\n",
     "Cette équation est non-linéaire. Ainsi, nous ne sommes pas en mesure de trouver une solution analytique.\n",
-    "C’est pourquoi nous utiliserons des schémas d’intégration afin d’obtenir la solution numérique du mouvement.\n",
+    "C’est pourquoi nous utiliserons des schémas d’intégration numérique afin d’obtenir la solution numérique du mouvement.\n",
     "\n",
     "\n",
     "\n",
@@ -173,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "34ba1db6",
    "metadata": {},
    "outputs": [
@@ -193,15 +198,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from numpy import zeros\n",
-    "from scipy.integrate import solve_ivp, odeint\n",
-    "import time\n",
+    "from scipy.integrate import solve_ivp, odeint          # -> a enlever ?\n",
+    "import time          # -> a enlever\n",
     "\n",
     "# Importation des fichiers\n",
     "import newmark as nk\n",
     "import newmark_masse_ajoutee as nk_ma\n",
     "import newmark_saut as nk_s\n",
     "import saut_final as sf\n",
-    "import saut_test as st\n",
+    "import saut_test as st          # -> a enlever\n",
     "import trace_delta_m_f as dmf\n",
     "\n",
     "%matplotlib widget\n",
@@ -217,12 +222,11 @@
     "## III - Modélisation du déplacement de la poutre via l’algorithme de Newmark\n",
     "\n",
     "Dans un premier temps, nous travaillons sans masse ajoutée sur la poutre. Nous mettons en place\n",
-    "l’algorithme de Newmark afin de tracer une courbe de réponse de la position de l’extrémité de la nano-poutre\n",
+    "l’algorithme de Newmark afin de tracer l'évolution de la position de l’extrémité de la nano-poutre\n",
     "en fonction du temps.\n",
     "\n",
     "La courbe est obtenue pour une pulsation Ω donnée, avec deux conditions initiales sur la position et la\n",
-    "vitesse. Ainsi, nous observons le déplacement de la poutre lorsqu’elle est écartée de sa position d’origine et\n",
-    "mise en mouvement par une perturbation extérieure.\n",
+    "vitesse.\n",
     "\n"
    ]
   },
@@ -241,14 +245,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "a7efdb1a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excitation : $\\Omega$ = 0.99 et les condition initiales : $Y_0 = $ 0.5 $dY_0 =$ 0.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:17: SyntaxWarning: invalid escape sequence '\\O'\n",
+      "<>:17: SyntaxWarning: invalid escape sequence '\\O'\n",
+      "/var/folders/gd/k6g09xm11wlbk8b_khvw7wlr0000gn/T/ipykernel_12630/2399868211.py:17: SyntaxWarning: invalid escape sequence '\\O'\n",
+      "  print(f'Excitation : $\\Omega$ = {OMEGA} et les condition initiales : $Y_0 = $ {Y0} $dY_0 =$ {dY0}')\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72d922c982734005ae64c8b6956b75ef",
+       "model_id": "b2077cad00194f0799eb51fb5dd60689",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,6 +297,8 @@
     "T, Vdc, Vac, omega0, M, C, K = nk.init_params()\n",
     "\n",
     "OMEGA = 0.99\n",
+    "Y0 = 0.5\n",
+    "dY0 = 0.5\n",
     "\n",
     "periode = 2 * np.pi / OMEGA  # Period of excitation and response\n",
     "nb_pts_per = 50              # Number of points per period for time integration\n",
@@ -284,7 +307,9 @@
     "t_tot = nb_per * periode     # Final time\n",
     "t_init = 0                   # Initial time\n",
     "NT = nb_per * nb_pts_per\n",
-    "tt, Yt, dYt = nk.Newmark(0.5, 0.5, 0, dt,NT,omega0,T,Vdc,Vac,OMEGA,M,C,K)\n",
+    "tt, Yt, dYt = nk.Newmark(Y0, dY0, 0, dt,NT,omega0,T,Vdc,Vac,OMEGA,M,C,K)\n",
+    "\n",
+    "print(f'Excitation : $\\Omega$ = {OMEGA} et les condition initiales : $Y_0 = $ {Y0} $dY_0 =$ {dY0}')\n",
     "\n",
     "fig, ax = plt.subplots(figsize = (12,6))\n",
     "ax.plot(tt/omega0, Yt, label='position en Y de la poutre en fonction du temps')\n",
@@ -338,7 +363,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "477ab0a030144a4a85bc6395de2b1826",
+       "model_id": "4fce103fedfc4b56bbff1188e7b9301c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -399,7 +424,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a35a028165c4fedaf7c8997d991855d",
+       "model_id": "8912bed6e6ca4f05bb5b5fb5b4ec29c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,7 +493,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecc67eb697474e78a2fd9bac4d9b60b6",
+       "model_id": "0d441674202b4f10a14a71e56a6ccfec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -533,7 +558,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d99cf995b2284f9ea5b72ef956eedd86",
+       "model_id": "6c99aeaf7bc04891b396f6c0019838d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -573,7 +598,9 @@
    "id": "6ec055a7",
    "metadata": {},
    "source": [
-    "Dans un premier temps, la méthode consiste à tracer la courbe de réponse en amplitude de déplacement de la poutre en fonction de la pulsation d'excitation, en l'absence de masse ajoutée (courbe référence). On superpose ensuite les courbes de réponse obtenues pour différentes masses ajoutées. En comparant les fréquences de résonance (positions des pics) entre la courbe de référence et celles modifiées, il est alors possible d’évaluer le décalage en fréquence due à l’ajout de masse. Cette variation permet d’estimer la masse ajoutée avec une certaine précision."
+    "Dans un premier temps, la méthode consiste à tracer la courbe de réponse en amplitude de déplacement de la poutre en fonction de la pulsation d'excitation, en l'absence de masse ajoutée (courbe référence). On superpose ensuite les courbes de réponse obtenues pour différentes masses ajoutées. \n",
+    "\n",
+    "En comparant les fréquences de résonance (positions des pics) entre la courbe de référence et celles modifiées, il est alors possible d’évaluer le décalage en fréquence due à l’ajout de masse. Cette variation permet d’estimer la masse ajoutée avec une certaine précision."
    ]
   },
   {
