--- a/jupyter-MEMS.ipynb
+++ b/jupyter-MEMS.ipynb
@@ -476,7 +476,8 @@
    "id": "9bb249fc",
    "metadata": {},
    "source": [
-    "## V - Méthode 1 : Décalage en fréquence"
+    "## V - Méthode 1 : Mesure du décalage en fréquence\n",
+    "\n"
    ]
   },
   {
@@ -487,16 +488,15 @@
     "### IV.2 - Modification du modèle et ajout d’une masse $\\delta m$\n",
     "\n",
     "Maintenant que le modèle fonctionne sans masse ajoutée, nous pouvons simuler l’ajout d’une petite masse\n",
-    "sur la poutre en modifiant la valeur de la masse adimensionnée 𝑀. En utilisant le même algorithme que celui\n",
-    "des étapes précédentes, nous traçons la courbe de réponse du capteur pour une masse ajoutée allant de $10^{-12} kg$ à $10^{-15} kg$ et la comparons à celle sans masse ajoutée.\n",
+    "sur la poutre en modifiant la valeur de la masse adimensionnée 𝑀. \n",
     "\n",
-    "Avec ces courbes de réponse, nous observons que plus la masse ajoutée est grande, plus la courbe se déplace\n",
-    "vers les valeurs plus faibles de la pulsation."
+    "En utilisant le même algorithme que celui\n",
+    "des étapes précédentes, nous pouvons tracer l'évolution de l'amplitude dans le temps (Newmark) et enfin la courbe de réponse du capteur numériquement. Cette étude de masses ajoutée est menée de $10^{-13} kg$ à $10^{-15} kg$. Afin de les comparer à la courbe de réponse sans masse ajoutée, nous pouvons tracer les courbes sur le même graphique."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "303cfec4",
    "metadata": {},
    "outputs": [
@@ -533,6 +533,8 @@
     "OMEGA_debut = 0.98\n",
     "OMEGA_fin = 1.1\n",
     "\n",
+    "delta_m = 1e-13          # Valeur de delta_m pour la courbe de réponse (a modifier)\n",
+    "\n",
     "OMEGA_MAX, OME, AMPL, OME2, AMPL2 = nk_ma.courbe_reponse_delta_m(OMEGA_debut, OMEGA_fin, dOMEGAinit, deltam=1e-13, montee=True, data = True)\n",
     "\n",
     "plot = nk.plot_response_curve(OME, AMPL, OME2, AMPL2, OMEGA_data, AMPL_data, ax, deltam=1e-13, tracer_data=True)\n",
@@ -540,7 +542,17 @@
     "OMEGA_MAX, OME, AMPL, OME2, AMPL2 = nk_ma.courbe_reponse_delta_m(OMEGA_debut, OMEGA_fin, dOMEGAinit, deltam=1e-14, montee=True, data = True)\n",
     "\n",
     "plot = nk.plot_response_curve(OME, AMPL, OME2, AMPL2, OMEGA_data, AMPL_data, ax, deltam=1e-14)\n",
+    "\n",
+    "#BIEN AJOUTER LES LEGENDES ET TITRES FLECHES DE DELTAOMEGA ETC !\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c16d7a3c",
+   "metadata": {},
+   "source": [
+    "Avec ces courbes de réponse, nous observons que plus la masse ajoutée est grande, plus la courbe se translate sur l'axe des abscices négativement. ..."
    ]
   },
   {
