partie 2 en cours

--- a/jupyter-MEMS.ipynb
+++ b/jupyter-MEMS.ipynb
@@ -123,7 +123,7 @@
     "$x$ étant le déplacement du bout de la poutre et $\\dot{x}$, $\\ddot{x}$ ses dérivées par rapport au temps t.\n",
     "\n",
     "Avec :\n",
-    "- La force électrostatique non-linéaire est : $ F_e(x,t) = \\frac{\\varepsilon_0 A}{2} \\cdot \\frac{\\left[ V_{dc} + V_{ac} \\cos(\\omega t) \\right]^2}{(d - x)^2}$ \n",
+    "- La force électrostatique non-linéaire est : $ F_e(x,t) = \\frac{\\varepsilon_0 A}{2} \\cdot \\frac{\\left[ V_{dc} + V_{ac} \\cos(\\omega t) \\right]^2}{(d - x)^2}$ , avec $\\omega$ la pulsation d'excitation de la tension alternative\n",
     "- $m = \\rho A h$ : masse de la nano-poutre de masse volumique $\\rho$ homogne\n",
     "- $c$ et $k$ : coefficient d'amortissement et de raideur respectifs\n",
     "    \n",
@@ -649,7 +649,7 @@
    "id": "6ed978c0",
    "metadata": {},
    "source": [
-    "Nous pouvons donc obtenir l'équation de la régression linéaire : $ \\Delta f = 1.99.10^{18} \\Delta m - 3.80.10^{2}$        # *f0 pr avoir la réelle freqs?\n",
+    "Nous pouvons donc obtenir l'équation de la régression linéaire : $ \\Delta f = 1.99.10^{18} \\Delta m - 3.80.10^{2}$        # *f0 pr avoir la freq réelle ?\n",
     "\n",
     "Comme nous pouvons le voir, celle-ci n'est valable que jusqu'à une certaine précision de l'ordre de $\\delta m_{min} \\approx 10^{-15} kg$, au dela de laquelle les erreurs numériques prennent le dessus et rendent les mesures bruitées et insignifiante.\n",
     "\n",
@@ -672,7 +672,11 @@
    "cell_type": "markdown",
    "id": "89f79cbb",
    "metadata": {},
-   "source": []
+   "source": [
+    "Nous cherchons donc une autre méthode pour détecter un ajout de masse qui serait encore plus précis.\n",
+    "\n",
+    "Dans ces conditions, une technique breveté par notre enseignant référant consiste à modifier la pulsation d'excitation de la tension alternative $\\omega $ en continue. Cette modification en continue permet de faire varier l'ancien $\\Omega$, remplacé  se fait sous la forme d'un balayage entre deux pulsations adimentionnées $\\Omega_{min}$ et $\\Omega_{max}$ fixes en faisant varier "
+   ]
   },
   {
    "cell_type": "markdown",
