partie 2 en cours

--- a/jupyter-MEMS.ipynb
+++ b/jupyter-MEMS.ipynb
@@ -159,11 +159,11 @@
     "$$M \\ddot{y} + C \\dot{y} + K y + f_{nl}(y) = p(\\tau)$$\n",
     "\n",
     "Et:\n",
-    "- $M = 1 + \\frac{\\delta m}{m}$\n",
+    "- $M = 1 + \\frac{\\delta m}{m}$  ### a tt expliquer !\n",
     "- $C = \\xi = \\frac{c}{mw_0} $\n",
     "- $K = (1 - 2T V_{dc}^2) $\n",
     "- $f_{nl}(y) = - (3T V_{dc}^2)y^2 - (4T V_{dc}^2)y^3$\n",
-    "- $p(\\tau) = T V_{dc}^2 + 2T V_{dc} V_{ac} \\cos(\\Omega \\tau)$\n",
+    "- $p(\\tau) = T V_{dc}^2 + 2T V_{dc} V_{ac} \\cos(\\Omega \\tau)$, l'excitation ... (a changer aussi en bas par le meme nom dans la cellule ou je presente $\\theta$)\n",
     "\n",
     "\n",
     "Cette équation est non-linéaire. Ainsi, nous ne sommes pas en mesure de trouver une solution analytique.\n",
@@ -675,7 +675,47 @@
    "source": [
     "Nous cherchons donc une autre méthode pour détecter un ajout de masse qui serait encore plus précis.\n",
     "\n",
-    "Dans ces conditions, une technique breveté par notre enseignant référant consiste à modifier la pulsation d'excitation de la tension alternative $\\omega $ en continue. Cette modification en continue permet de faire varier l'ancien $\\Omega$, remplacé  se fait sous la forme d'un balayage entre deux pulsations adimentionnées $\\Omega_{min}$ et $\\Omega_{max}$ fixes en faisant varier "
+    "Dans ces conditions, une technique breveté par notre enseignant référant consiste à modifier la pulsation d'excitation de la tension alternative $\\omega $ en continue. Cette modification en continue permet de faire varier dans le temps l'ancien $\\Omega$, remplacé par la suite par $\\theta$, sous la forme d'un balayage entre deux pulsations adimentionnées $\\Omega_{min}$ et $\\Omega_{max}$ fixes. \n",
+    "\n",
+    "$$\\theta = \\Omega_c t + \\frac{\\Delta \\Omega}{\\Omega_{bal}} cos(\\Omega_{bal} \\tau) $$\n",
+    "\n",
+    "avec :\n",
+    "- $\\Omega_c = \\frac{\\Omega_{max} + \\Omega_{min}}{2}$, la pulsation adimentionnée mediane\n",
+    "- $\\Delta \\Omega = \\frac{\\Omega_{max} - \\Omega_{min}}{2}$, l'équart entre $\\Omega_c$ et $\\Omega_{max/min}$\n",
+    "- $\\Omega_{bal}$ la pulsation liée à la fréquence de balayage\n",
+    "\n",
+    "La nano-poutre est donc soumise à la FORCE A CHANGER DE NOM CF EQ ADIMENTIONNEE :\n",
+    "- $p(\\tau) = T V_{dc}^2 + 2T V_{dc} V_{ac} \\cos(\\theta \\tau)$\n",
+    "\n",
+    " Celle-ci varie sous la forme d'un signal à modulation de phase, ou plus précisément un cosinus à phase modulée par $\\theta$ (elle pourrait être développable en série de Bessel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e211fc27",
+   "metadata": {},
+   "source": [
+    "### VI.1 - Tracé de l'évolution de l'extrémité de la poutre dans le temps sans masse ajoutée"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b5504ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TRACER JUSTE POUR LA SANS MASSE AJOUTE +  donner des details sur tout les Omega etc choisit ! \n",
+    "# Bien preciser pas adimentionner et multiplier par d !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5ba869f",
+   "metadata": {},
+   "source": [
+    "Nous pouvons donc observer \n",
+    "A noter : Le schéma de Newmark converge alors vers une solution périodique de période $\\frac{2 \\pi}{\\Omega_c}$, dans le cas où il converge."
    ]
   },
   {
