partie 2 en cours bien avancé

--- a/jupyter-MEMS.ipynb
+++ b/jupyter-MEMS.ipynb
@@ -673,6 +673,8 @@
    "id": "89f79cbb",
    "metadata": {},
    "source": [
+    "### VI.1 - Théorie de la méthode 2\n",
+    "\n",
     "Nous cherchons donc une autre méthode pour détecter un ajout de masse qui serait encore plus précis.\n",
     "\n",
     "Dans ces conditions, une technique breveté par notre enseignant référant consiste à modifier la pulsation d'excitation de la tension alternative $\\omega $ en continue. Cette modification en continue permet de faire varier dans le temps l'ancien $\\Omega$, remplacé par la suite par $\\theta$, sous la forme d'un balayage entre deux pulsations adimentionnées $\\Omega_{min}$ et $\\Omega_{max}$ fixes. \n",
@@ -687,12 +689,33 @@
     "La nano-poutre est donc soumise à la FORCE A CHANGER DE NOM CF EQ ADIMENTIONNEE :\n",
     "- $p(\\tau) = T V_{dc}^2 + 2T V_{dc} V_{ac} \\cos(\\theta \\tau)$\n",
     "\n",
-    " Celle-ci varie sous la forme d'un signal à modulation de phase, ou plus précisément un cosinus à phase modulée par $\\theta$ (elle pourrait être développable en série de Bessel)"
+    "Celle-ci varie sous la forme d'un signal à modulation de phase, ou plus précisément un cosinus à phase modulée par $\\theta$ (elle pourrait être développable en série de Bessel)\n",
+    "\n",
+    "**Comment détecte-t-on un saut ?**"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "e211fc27",
+   "metadata": {},
+   "source": [
+    "- Dans un premier temps, sans masse ajoutée, nous pouvons tracer l'évolution de l'extremité de la nano-poutre dans le temps avec le balayage en fréquence.\n",
+    "\n",
+    "En choisissant des borne de $\\Omega_{max}$ et $\\Omega_{min}$ adaptées, nous pouvons donc chercher à faire en sorte que les amplitudes restent minimales afin que lorsque nous ajouterons une masse ajoutée, de même manière que la courbe de réponse se décale vers les abscisses négatives.\n",
+    "\n",
+    "En réglant optimalement $\\Omega_{min}$, nous pouvons faire en sorte que quelque soit les conditions initiales, si l'on sort de la zone de bistabilité vers les abscisses négatives (sur la gauche), l'amplitude \"retombe\" sur les amplitudes de montée en fréquence de la courbe de réponse.\n",
+    "\n",
+    "Il reste donc à régler optimalement $\\Omega_{max}$. Afin de mesurer un saut d'amplitude, nous pouvons régler $\\Omega_{max}$ à la limite de saut d'amplitude pour aucune masse ajoutée. A cet $\\Omega_{max}$, lorsque l'on ajoutera une masse $\\delta m$, la courbe de réponse se translatera vers les abscisses negatives et l'amplitude \"sautera\" vers les solutions d'amplitude haute. \n",
+    "Si l'on trace l'évolution de l'amplitude du résonnateur dans le temps, lors de l'ajout d'une masse, un saut apparaitra!\n",
+    "\n",
+    "- Dans un second temps, nous pouvons optimiser le transitoire lors de la lancée de Newmark en prenant des conditions initiales optimales. Celle-ci peuvent être déterminées à l'aide d'un bassin d'attraction\n",
+    "\n",
+    "- Enfin, la précision de la masse minimale détectable dépend de la précision du $\\Omega_{max}$ donné, au plus proche de la pulsation adimentionnée de saut pour la nano-poutre sans masse ajoutée."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28277194",
    "metadata": {},
    "source": [
     "### VI.1 - Tracé de l'évolution de l'extrémité de la poutre dans le temps sans masse ajoutée"
